# ftb

./: .gitignore  Cargo.toml  README.md  build.rs
assets/environment_maps/: t.json
assets/machines/m1/: fhole_stp.gltf
assets/machines/m2/: dayama_alt.glb  dayama_alt2.glb  dayamam_kizak.glb  dayamam_kizak2.glb  dayamam_kizak3.glb  dayamam_kizak_arka.glb  dayamam_kizak_arka2.glb  dayamam_kizak_arka3.glb  malafa.glb  mengene.glb  mengene2.glb  mengene_alt.glb  mengene_alt2.glb  palka2m.glb  palka3.glb  palkam.glb  pens.glb  sasi.glb
src/: main.rs
src/adds/: line.rs  mod.rs
src/algo/: cnc.rs  mod.rs  solids.rs  triangulation.rs
src/files/: 1.stp  10.stp  11.stp  12.stp  13.stp  14.stp  15.stp  16.stp  17.stp  2.stp  3.stp  4.stp  5.stp  6.stp  7.stp  8.stp  9.stp
src/render/: line.rs
src/states/: machine_control.rs  mod.rs  pipe_control.rs  scene_control.rs  state_machine.rs
src/ui/: app_settings.rs  axes.rs  bottompanel.rs  camera.rs  leftpanel.rs  mod.rs  toppanel.rs
