[package]
name = "ftb"
version = "0.1.0"
edition = "2024"


[dependencies]
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
itertools = "0.14.0"
cgmath = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
utf8-read = "0.4.0"
rand = "0.9.1"

is-odd = "1.1.1"
truck-base = { git = "https://github.com/ricosjp/truck.git" }
ruststep = { version = "0.4.0",features = ["ap201","ap203"] }
truck-geometry = { git = "https://github.com/ricosjp/truck.git" }
truck-modeling = { git = "https://github.com/ricosjp/truck.git" }
truck-topology = { git = "https://github.com/ricosjp/truck.git" }
truck-meshalgo = { git = "https://github.com/ricosjp/truck.git" }
truck-stepio = { git = "https://github.com/ricosjp/truck.git" }

bevy = "0.16.1"
bevy_ecs = "0.16.1"
bevy_editor_cam = "0.6.0"
bevy_http_client = "0.8.3"
bevy_egui = "0.35.1"
rfd = "0.15.3"
chrono = "0.4.41"
image = "0.25.6"
winit = "0.30.11"
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"