[package]
name = "ftb"
version = "20.0.1"
edition = "2024"

[profile.release]
#opt-level = 3
#lto = true

[dependencies]
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
itertools = "0.14.0"
cgmath = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
utf8-read = "0.4.0"
rand = "0.9.2"

is-odd = "1.1.1"

ruststep = { version = "0.4.0",features = ["ap201","ap203"] }
#ruststep = { git = "https://github.com/ricosjp/ruststep.git",features = ["ap201","ap203"] }
ordered-float = "5.1.0"

truck-base = { git = "https://github.com/ricosjp/truck.git" }
truck-geometry = { git = "https://github.com/ricosjp/truck.git" }
truck-modeling = { git = "https://github.com/ricosjp/truck.git" }
truck-topology = { git = "https://github.com/ricosjp/truck.git" }
truck-meshalgo = { git = "https://github.com/ricosjp/truck.git" }
truck-stepio = { git = "https://github.com/ricosjp/truck.git" }
truck-polymesh = { git = "https://github.com/ricosjp/truck.git" }
truck-geotrait = { git = "https://github.com/ricosjp/truck.git", features = ["derive"] }

#egui_alignments = "0.3.4"
egui_material_icons = "0.5.0"
bevy = "0.18.0"
bevy_ecs = "0.18.0"
#bevy_editor_cam = { path = "d:/rustproj2/bevy_editor_cam" }
#bevy_editor_cam = { git = "https://github.com/aevyrie/bevy_editor_cam.git" }


bevy_http_client = "0.9.0"
bevy_egui = "0.39.0"
rfd = "0.17.1"
chrono = "0.4.42"
image = "0.25.9"
winit = "0.30.12"
regex = "1.12.2"
glam = "0.30.10"
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"